--- a/ecom/crawl_app/crawl.ipynb
+++ b/ecom/crawl_app/crawl.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +641,26 @@
     "\n",
     "\n",
     "db.product.insert_many(list_insert)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fc9a9cd74c0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.product.update_many({}, {'$set' :{'sales': 0}})"
    ]
   },
   {
