--- a/ecom/crawl_app/crawl.ipynb
+++ b/ecom/crawl_app/crawl.ipynb
@@ -645,22 +645,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7fc9a9cd74c0>"
+       "<pymongo.results.UpdateResult at 0x7fedc8f1cc10>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.product.update_many({}, {'$set' :{'sales': 0}})"
+    "db.product.update_one({\"_id\": \"6cb7590a35c54bdebb65c85055553056\"}, {\"$inc\": {\"stocks\": -1}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x7fedc95ff280>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.product.update_many({}, {\"$set\": {\"seller\": \"admin\"}})"
    ]
   },
   {
