add remove product

--- a/ecom/crawl_app/crawl.ipynb
+++ b/ecom/crawl_app/crawl.ipynb
@@ -665,22 +665,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7fedc95ff280>"
+       "<pymongo.results.UpdateResult at 0x7f84986fb7f0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db.product.update_many({}, {\"$set\": {\"seller\": \"admin\"}})"
+    "db.product.update_many({}, {\"$set\": {\"listed\": 1}})"
    ]
   },
   {
