ad paginate to product stocks page

--- a/ecom/crawl_app/crawl.ipynb
+++ b/ecom/crawl_app/crawl.ipynb
@@ -671,7 +671,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x7f84986fb7f0>"
+       "<pymongo.results.UpdateResult at 0x7feda1c037c0>"
       ]
      },
      "execution_count": 3,
@@ -680,7 +680,7 @@
     }
    ],
    "source": [
-    "db.product.update_many({}, {\"$set\": {\"listed\": 1}})"
+    "db.product.update_many({}, {\"$set\": {\"seller\": \"pvthang1700@gmail.com\"}})"
    ]
   },
   {
